Updated some files

--- a/siemens_application_microsite/index.html
+++ b/siemens_application_microsite/index.html
@@ -64,7 +64,7 @@
       <h2>Why did I choose application development?</h2>
       <p>I have been fascinated by computers and computer science <strong>since childhood</strong>. Thanks to my <strong>father, who showed me the IT sphere</strong>, I came into contact with programming early and began experimenting at the <strong>age of seven</strong>. Since then,<br>I have regularly pursued new ideas with great enthusiasm. <strong>Several internships</strong> have confirmed my career goal and shown me that I am especially passionate about <strong>application development</strong>. The blend of planning, implementation, and creativity excites me, which is why I am applying for an <strong>apprenticeship</strong> as a <strong>computer scientist EFZ</strong> in <strong>application development</strong> for <strong>summer 2026</strong>.</p>
       <h2>Why do I want to work at Siemens?</h2>
-      <p>I have already heard <strong>many positive things</strong> about your company from friends who completed an <strong>internship</strong> at Siemens. These impressions strengthened my wish to pursue my apprenticeship at a <strong>leading international company</strong>.<br>I especially value the wide range of <strong>training opportunities</strong>, the possibility of obtaining a <strong>vocational baccalaureate</strong>, and the chance to complete parts of the <strong>apprenticeship in English</strong>, for which I am well prepared thanks to my <strong>Cambridge First Certificate</strong>.</p>
+      <p>I have already heard <strong>many positive things</strong> about your company from friends who completed an <strong>internship</strong> at Siemens. These impressions strengthened my wish to pursue my apprenticeship at a <strong>leading international company</strong>.<br>I especially value the wide range of <strong>training opportunities</strong> and the possibility of obtaining a <strong>vocational baccalaureate</strong>.</p>
     </section>
     
     <!--Progress-->
@@ -92,7 +92,7 @@
     <!--GitHub-->
     <section class="card" id="github" data-index="10">
       <h1>GitHub</h1>  
-      <p>You can find the source code for this microsite on my <strong><a href="https://github.com/sir-orlovsky/own-website" target="_blank" rel="noopener">GitHub profile</a></strong>.</p>
+      <p>You can find the source code for this microsite on my <strong><a href="https://github.com/sir-orlovsky/microsite" target="_blank" rel="noopener">GitHub profile</a></strong>.</p>
     </section>
     
     <!--babay-->
